--- a/index.html
+++ b/index.html
@@ -11,38 +11,27 @@
         <script src="sketch.js"></script>
     </head>
     <body>
-        <h1>Arnav Kumar</h1>
-        <div>
-            <a title="github: arnavcs" href="https://github.com/arnavcs"><img src="img/GitHub-Mark-120px-plus.png"></a> <!-- https://github.com/logos -->
-            <a title="linkedin: Arnav Kumar" href="https://www.linkedin.com/in/arnav-kumar-0644881a3/"><img src="img/LI-In-Bug-black.png"></a> <!-- https://brand.linkedin.com/downloads -->
-            <a title="email: arnavcalgary12@gmail.com" href="mailto: arnavcalgary12@gmail.com"><img alt="Envelope font awesome" src="img/512px-Envelope_font_awesome.svg.png"></a> <!-- https://commons.wikimedia.org/wiki/File:Envelope_font_awesome.svg --> <!-- Font Awesome by Dave Gandy - https://fortawesome.github.com/Font-Awesome / CC BY-SA (https://creativecommons.org/licenses/by-sa/3.0) -->
-        </div>
-        <p>words</p>
-        <p>words</p>
-        <p>words</p>
-        <p>words</p>
-        <p>words</p>
-        <p>words</p>
-        <p>words</p>
-        <p>words</p>
-        <p>words</p>
-        <p>words</p>
-        <p>words</p>
-        <p>words</p>
-        <p>words</p>
-        <p>words</p>
-        <p>words</p>
-        <p>words</p>
-        <p>words</p>
-        <p>words</p>
-        <p>words</p>
-        <p>words</p>
-        <p>words</p>
-        <p>words</p>
-        <p>words</p>
-        <p>words</p>
-        <p>words</p>
-        <p>words</p>
-        <p>words</p>
+        <header>
+            <h1>Arnav Kumar</h1>
+            <div>
+                <a title="github: arnavcs" href="https://github.com/arnavcs"><img src="img/GitHub-Mark-120px-plus.png"></a> <!-- https://github.com/logos -->
+                <a title="linkedin: Arnav Kumar" href="https://www.linkedin.com/in/arnav-kumar-0644881a3/"><img src="img/LI-In-Bug-black.png"></a> <!-- https://brand.linkedin.com/downloads -->
+                <a title="email: arnavcalgary12@gmail.com" href="mailto: arnavcalgary12@gmail.com"><img alt="Envelope font awesome" src="img/512px-Envelope_font_awesome.svg.png"></a> <!-- https://commons.wikimedia.org/wiki/File:Envelope_font_awesome.svg --> <!-- Font Awesome by Dave Gandy - https://fortawesome.github.com/Font-Awesome / CC BY-SA (https://creativecommons.org/licenses/by-sa/3.0) -->
+            </div>
+        </header>
+        <section>
+            <h2>Web Projects</h2>
+            <div>
+                <a href="https://arnavcs.github.io/pong/">Pong</a>
+                <a href="https://arnavcs.github.io/lissajous/">Lissajous curve generator</a>
+                <a href="https://arnavcs.github.io/rose/">Rose curve generator</a>
+            </div>
+            <h2>Math Projects</h2>
+            <div>
+                <a>Yes</a>
+                <a>no</a>
+            </div>
+        </section>
+        <footer></footer>
     </body>
 </html>
