--- a/index.html
+++ b/index.html
@@ -28,8 +28,7 @@
             </div>
             <h2>Math Projects</h2>
             <div>
-                <a>Yes</a>
-                <a>no</a>
+                <a href="img/Interesting_Integral.pdf">Interesing Integral</a>
             </div>
         </section>
         <footer></footer>
