--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             </div>
             <h2>Math Projects</h2>
             <div>
-                <a href="img/Interesting_Integral.pdf">Interesing Integral</a>
+                <a href="img/Interesting_Integral.pdf">Interesting Integral</a>
             </div>
         </section>
         <footer></footer>
