--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
             <h2>Math Projects</h2>
             <div>
                 <a href="img/Interesting_Integral.pdf">Interesting Integral</a>
+                <a href="img/Arnav_s_Companion_to_Mathematics.pdf">Arnav's Companion to Mathematics</a>
             </div>
         </section>
         <footer></footer>
