fixed some links

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                 <a href="https://arnavcs.github.io/inferior-pentagon-web/">Inferior Pentagon</a>
                 <a href="https://arnavcs.github.io/pong/">Pong</a>
                 <a href="https://arnavcs.github.io/lissajous/">Lissajous curve generator</a>
-                <a href="https://arnavcs.github.io/rose/">Rose curve generator</a>
+                <a href="https://arnavcs.github.io/roseCurve/">Rose curve generator</a>
             </div>
             <h2>Math Projects</h2>
             <div>
