--- a/index.html
+++ b/index.html
@@ -22,10 +22,10 @@
         <section>
             <h2>Web Projects</h2>
             <div>
-                <a href="https://arnavcs.github.io/inferior-pentagon-web/">Inferior Pentagon</a>
+                <a href="https://arnavcs.github.io/inferior-pentagon/">Inferior Pentagon</a>
                 <a href="https://arnavcs.github.io/pong/">Pong</a>
-                <a href="https://arnavcs.github.io/lissajous/">Lissajous curve generator</a>
-                <a href="https://arnavcs.github.io/roseCurve/">Rose curve generator</a>
+                <a href="https://arnavcs.github.io/lissajous-curve-generator/">Lissajous curve generator</a>
+                <a href="https://arnavcs.github.io/rose-curve-generator/">Rose curve generator</a>
             </div>
             <h2>Math Projects</h2>
             <div>
