--- a/index.html
+++ b/index.html
@@ -22,7 +22,8 @@
         <section>
             <h2>Web Projects</h2>
             <div>
-                <a href="https://arnavcs.github.io/inferior-pentagon/">Inferior Pentagon</a>
+                <a href="https://arnavcs.github.io/game-of-life/">Game of Life</a>
+                <a href="https://arnavcs.github.io/inferior-pentagon-web/">Inferior Pentagon</a>
                 <a href="https://arnavcs.github.io/pong/">Pong</a>
                 <a href="https://arnavcs.github.io/lissajous-curve-generator/">Lissajous curve generator</a>
                 <a href="https://arnavcs.github.io/rose-curve-generator/">Rose curve generator</a>
