--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
                 <a title="github: arnavcs" href="https://github.com/arnavcs"><img src="img/GitHub-Mark-120px-plus.png"></a> <!-- https://github.com/logos -->
                 <a title="linkedin: Arnav Kumar" href="https://www.linkedin.com/in/arnav-kumar-0644881a3/"><img src="img/LI-In-Bug-black.png"></a> <!-- https://brand.linkedin.com/downloads -->
                 <a title="email: arnavcalgary12@gmail.com" href="mailto: arnavcalgary12@gmail.com"><img alt="Envelope font awesome" src="img/512px-Envelope_font_awesome.svg.png"></a> <!-- https://commons.wikimedia.org/wiki/File:Envelope_font_awesome.svg --> <!-- Font Awesome by Dave Gandy - https://fortawesome.github.com/Font-Awesome / CC BY-SA (https://creativecommons.org/licenses/by-sa/3.0) -->
+		        <a title="Arnav's resume" href="img/Arnav_s_Resume.pdf"><img alt="Icon made from http://www.onlinewebfonts.com/icon Icon Fonts is licensed by CC BY 3.0" src="img/resume.png"></a> <!-- https://www.onlinewebfonts.com/icon/542830 -->
             </div>
         </header>
         <section>
