--- a/index.html
+++ b/index.html
@@ -4,32 +4,84 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Arnav Kumar</title>
-        <link href="https://fonts.googleapis.com/css?family=Poppins&display=swap" rel="stylesheet">
         <link rel="stylesheet" type="text/css" href="style.css">
-        <script src="script.js"></script>
-        <script src="https://cdn.jsdelivr.net/npm/p5@0.10.2/lib/p5.js"></script>
-        <script src="sketch.js"></script>
     </head>
     <body>
         <header>
             <h1>Arnav Kumar</h1>
-            <div>
-                <a title="github: arnavcs" href="https://github.com/arnavcs"><img src="img/GitHub-Mark-120px-plus.png"></a> <!-- https://github.com/logos -->
-                <a title="linkedin: Arnav Kumar" href="https://www.linkedin.com/in/arnav-kumar-0644881a3/"><img src="img/LI-In-Bug-black.png"></a> <!-- https://brand.linkedin.com/downloads -->
-                <a title="email: arnavcalgary12@gmail.com" href="mailto: arnavcalgary12@gmail.com"><img alt="Envelope font awesome" src="img/512px-Envelope_font_awesome.svg.png"></a> <!-- https://commons.wikimedia.org/wiki/File:Envelope_font_awesome.svg --> <!-- Font Awesome by Dave Gandy - https://fortawesome.github.com/Font-Awesome / CC BY-SA (https://creativecommons.org/licenses/by-sa/3.0) -->
-		        <a title="Arnav's resume" href="img/Arnav_s_Resume.pdf"><img alt="Icon made from http://www.onlinewebfonts.com/icon Icon Fonts is licensed by CC BY 3.0" src="img/resume.png"></a> <!-- https://www.onlinewebfonts.com/icon/542830 -->
-            </div>
+            <hr>
         </header>
         <section>
-            <div>
-                <a href="https://arnavcs.github.io/game-of-life/">Game of Life</a>
-                <a href="https://arnavcs.github.io/inferior-pentagon-web/">Inferior Pentagon</a>
-                <a href="https://arnavcs.github.io/pong/">Pong</a>
-                <a href="https://arnavcs.github.io/lissajous-curve-generator/">Lissajous curve generator</a>
-                <a href="https://arnavcs.github.io/rose-curve-generator/">Rose curve generator</a>
-                <a href="img/Interesting_Integral.pdf">Interesting Integral</a>
+            <h2>⚙️ Projects ⚙️</h2>
+            <h2>🏅 Achievements 🏅</h2>
+            <div class="twocol">
+                <h3>2022</h3>
+                <ul>
+                    <li class="math">1st and a perfect score, Alberta High School Math Competition pt. I</li>
+                    <li class="math">123 out of 150, American Mathematics Contest 12</li>
+                    <li class="math">Qualified, Canadian Mathematics Olympiad</li>
+                    <li class="math">Qualified, American Invitational Math Exam</li>
+                </ul>
+                <h3>2021</h3>
+                <ul>
+                    <li class="math">Top 18 of 90, Canadian Mathematics Olympiad</li>
+                    <li class="math">Top in Alberta overall and 72 out of 80 points, Canadian Open Mathematics Challenge</li>
+                    <li class="math">1st, Alberta High School Math Competition pt. I</li>
+                    <li class="math">7th, Alberta High School Math Competition pt. II</li>
+                    <li class="math">Qualified, American Invitational Math Exam</li>
+                    <li class="math">1st in Alberta and 27th nationally, Fermat</li>
+                    <li class="math">Top 1.5%, Canadian Senior Math Contest</li>
+                    <li class="science">Gold medal and Buckley Engineering Award, Calgary Youth Science Fair</li>
+                    <li class="science">Bronze Finalist, Canada Wide Science Fair</li>
+                    <li class="science">17th globally (12th in Canada), Sir Isaac Newton Exam</li>
+                </ul>
+                <h3>2020</h3>
+                <ul>
+                    <li class="math">Alberta silver medalist (Grade 11) and 5th overall, Canadian Open Mathematics Challenge</li>
+                    <li class="math">11th in grade 10, American Mathematics Competition 12</li>
+                    <li class="math">Qualified, American Invitational Math Exam</li>
+                    <li class="math">1th, Alberta High School Math Competition pt. I</li>
+                    <li class="math">10th, Alberta High School Math Competition pt. II</li>
+                    <li class="math">Top 0.5%, Fermat and Canadian Senior Math Contest</li>
+                    <li class="science">1st in Alberta, Michael Smith Science Challenge</li>
+                </ul>
+                <h3>2019</h3>
+                <ul>
+                    <li class="math">Team Captain, Canadian International Mathematics Competition team</li>
+                    <li class="math">Silver and Bronze medals, South Africa International Mathematics Competition</li>
+                    <li class="math">Alberta silver medalist (Grade 10) and 8th overall, Canadian Open Mathematics Challenge</li>
+                    <li class="math">2nd, Caribou Contest</li>
+                    <li class="math">Robert Barrington Leigh Memorial Prize, Alberta High School Math Competition</li>
+                    <li class="math">1st, Fryer Math Contest</li>
+                    <li class="math">7th, Canadian Intermediate Mathematics Contest</li>
+                    <li class="math">Top 1.5%, Fermat and Euclid</li>
+                    <li class="science">Gold medal and the Senior Pacific Institute of Mathematical Sciences Award, Calgary Youth Science Fair</li>
+                </ul>
+                <h3>2018</h3>
+                <ul>
+                    <li class="math">Merit, Bulgaria International Mathematics Competition</li>
+                    <li class="math">Top 1%, Canadian Intermediate Mathematics Contest</li>
+                    <li class="math">10th, Pascal Math Contest</li>
+                    <li class="math">23rd, Fryer Math Contest</li>
+                    <li class="math">Alberta gold medal (grade 9), Canadian Open Mathematics Challenge</li>
+                </ul>
+                <h3>2017</h3>
+                <ul>
+                    <li class="math">Alberta gold medal (grade 8), Canadian Open Mathematics Challenge</li>
+                </ul>
+                <h3>2016</h3>
+                <ul>
+                    <li class="science">Gold medal and the Junior Pacific Institute of Mathematical Sciences Award, Calgary Youth Science Fair</li>
+                </ul>
             </div>
         </section>
-        <footer></footer>
+        <footer>
+            <hr>
+            <p>
+                🐙🐱 <a href="https://github.com/arnavcs">Github (arnavcs)</a> ⌨️🖱️
+                |
+                📧 <a href="mailto: arnavcalgary12@gmail.com">Email (arnavcalgary12@gmail.com)</a> 📧
+            </p>
+        </footer>
     </body>
 </html>
