--- a/index.html
+++ b/index.html
@@ -74,6 +74,7 @@
                     <li class="science">Gold medal and the Junior Pacific Institute of Mathematical Sciences Award, Calgary Youth Science Fair</li>
                 </ul>
             </div>
+            <h2>️🛠️ Experience 🛠️️</h2>
         </section>
         <footer>
             <hr>
