added project links

--- a/index.html
+++ b/index.html
@@ -13,6 +13,16 @@
         </header>
         <section>
             <h2>⚙️ Projects ⚙️</h2>
+            <div class="floating-list">
+                <a href="https://github.com/arnavcs/flashcards" class="bash cs">Bash Flashcards</a>
+                <a href="https://github.com/arnavcs/OSIC-IPF" class="python latex cs">Prognosing Idiopathic Pulmonary Fibrosis</a>
+                <a href="https://github.com/arnavcs/black-jack" class="cpp cs">Black Jack</a>
+                <a href="https://arnavcs.github.io/game-of-life/" class="javascript cs">Conway's Game of Life</a>
+                <a href="https://arnavcs.github.io/inferior-pentagon-web/" class="unity cs">Inferior Pentagon</a>
+                <a href="https://arnavcs.github.io/pong/" class="javascript cs">Pong</a>
+                <a href="https://arnavcs.github.io/rose-curve-generator/" class="javascript cs">Rose Curve Generator</a>
+                <a href="https://arnavcs.github.io/lissajous-curve-generator/" class="javascript cs">Lissajous Curve Generator</a>
+            </div>
             <h2>🏅 Achievements 🏅</h2>
             <div class="twocol">
                 <h3>2022</h3>
@@ -75,13 +85,14 @@
                 </ul>
             </div>
             <h2>️🛠️ Experience 🛠️️</h2>
+            <h2>️🛠️ Education 🛠️️</h2>
         </section>
         <footer>
             <hr>
             <p>
                 🐙🐱 <a href="https://github.com/arnavcs">Github (arnavcs)</a> ⌨️🖱️
                 |
-                📧 <a href="mailto: arnavcalgary12@gmail.com">Email (arnavcalgary12@gmail.com)</a> 📧
+                📧 <a href="mailto: arnav.kumar.sri@gmail.com">Email (arnav.kumar.sri@gmail.com)</a> 📧
             </p>
         </footer>
     </body>
