added acheivements and education

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
             <hr>
         </header>
         <section>
-            <h2>⚙️ Projects ⚙️</h2>
+            <h2>Projects️</h2>
             <div class="floating-list">
                 <a href="https://github.com/arnavcs/flashcards" class="bash cs">Bash Flashcards</a>
                 <a href="https://github.com/arnavcs/OSIC-IPF" class="python latex cs">Prognosing Idiopathic Pulmonary Fibrosis</a>
@@ -23,14 +23,17 @@
                 <a href="https://arnavcs.github.io/rose-curve-generator/" class="javascript cs">Rose Curve Generator</a>
                 <a href="https://arnavcs.github.io/lissajous-curve-generator/" class="javascript cs">Lissajous Curve Generator</a>
             </div>
-            <h2>🏅 Achievements 🏅</h2>
+            <h2>Achievements</h2>
             <div class="twocol">
                 <h3>2022</h3>
                 <ul>
+                    <li class="math">10th in Canada, Asian Pacific Mathematical Olympiad</li>
                     <li class="math">1st and a perfect score, Alberta High School Math Competition pt. I</li>
+                    <li class="math">1st, Alberta High School Math Competition pt. II</li>
                     <li class="math">123 out of 150, American Mathematics Contest 12</li>
                     <li class="math">Qualified, Canadian Mathematics Olympiad</li>
                     <li class="math">Qualified, American Invitational Math Exam</li>
+                    <li class="science">11th, Canadian Association of Physicists Contest</li>
                 </ul>
                 <h3>2021</h3>
                 <ul>
@@ -84,15 +87,42 @@
                     <li class="science">Gold medal and the Junior Pacific Institute of Mathematical Sciences Award, Calgary Youth Science Fair</li>
                 </ul>
             </div>
-            <h2>️🛠️ Experience 🛠️️</h2>
-            <h2>️🛠️ Education 🛠️️</h2>
+            <h2>Experience️️</h2>
+            <h2>️Education</h2>
+            <div class="module">
+                <div class="module-img">
+                    <img src="https://upload.wikimedia.org/wikipedia/en/6/6e/University_of_Waterloo_seal.svg">
+                </div>
+                <div class="module-content">
+                    <div class="module-header">
+                        <p class="module-title">University of Waterloo</p>
+                        <p class="module-date">2022 - Present</p>
+                    </div>
+                    <p><em>Bachelor of Computer Science</em></p>
+                    <p>Ronald G. Dunkley National Scholarship</p>
+                    <p>President’s Entrance Scholarship of Distinction</p>
+                </div>
+            </div>
+            <div class="module">
+                <div class="module-img">
+                    <img src="https://www.webberacademy.ca/pac/Theatre/Home_files/Webber%20Logo%20Large.png">
+                </div>
+                <div class="module-content">
+                    <div class="module-header">
+                        <p class="module-title">Webber Academy</p>
+                        <p class="module-date">2008 - 2022</p>
+                    </div>
+                    <p>Webber Scholar from Grade 6-12 with annual Merit Scholarship</p>
+                    <p>laskdfjlaksdjf</p>
+                </div>
+            </div>
         </section>
         <footer>
             <hr>
             <p>
-                🐙🐱 <a href="https://github.com/arnavcs">Github (arnavcs)</a> ⌨️🖱️
+                 <a href="https://github.com/arnavcs">Github (arnavcs)</a> ️
                 |
-                📧 <a href="mailto: arnav.kumar.sri@gmail.com">Email (arnav.kumar.sri@gmail.com)</a> 📧
+                 <a href="mailto: arnav.kumar.sri@gmail.com">Email (arnav.kumar.sri@gmail.com)</a> 
             </p>
         </footer>
     </body>
