formatted the module better

--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
                         <p class="module-title">University of Waterloo</p>
                         <p class="module-date">2022 - Present</p>
                     </div>
-                    <p><em>Bachelor of Computer Science</em></p>
+                    <p class="module-brief">Bachelor of Computer Science</p>
                     <p>Ronald G. Dunkley National Scholarship</p>
                     <p>President’s Entrance Scholarship of Distinction</p>
                 </div>
@@ -112,8 +112,8 @@
                         <p class="module-title">Webber Academy</p>
                         <p class="module-date">2008 - 2022</p>
                     </div>
-                    <p>Webber Scholar from Grade 6-12 with annual Merit Scholarship</p>
-                    <p>laskdfjlaksdjf</p>
+                    <p class="module-brief">Webber Scholar from grade 6 to 12</p>
+                    <p>Recieved annual Merit Scholarship</p>
                 </div>
             </div>
         </section>
