modular style website

--- a/index.html
+++ b/index.html
@@ -4,125 +4,26 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Arnav Kumar</title>
-        <link rel="stylesheet" type="text/css" href="style.css">
+
+        <link rel="stylesheet" type="text/css" href="./style.css">
+        <script type="text/javascript" src="./content.js"></script>
+        <script type="text/javascript" src="./script.js" defer></script>
+
     </head>
     <body>
         <header>
             <h1>Arnav Kumar</h1>
             <hr>
         </header>
-        <section>
-            <h2>Projects️</h2>
-            <div class="floating-list">
-                <a href="https://github.com/arnavcs/flashcards" class="bash cs">Bash Flashcards</a>
-                <a href="https://github.com/arnavcs/OSIC-IPF" class="python latex cs">Prognosing Idiopathic Pulmonary Fibrosis</a>
-                <a href="https://github.com/arnavcs/black-jack" class="cpp cs">Black Jack</a>
-                <a href="https://arnavcs.github.io/game-of-life/" class="javascript cs">Conway's Game of Life</a>
-                <a href="https://arnavcs.github.io/inferior-pentagon-web/" class="unity cs">Inferior Pentagon</a>
-                <a href="https://arnavcs.github.io/pong/" class="javascript cs">Pong</a>
-                <a href="https://arnavcs.github.io/rose-curve-generator/" class="javascript cs">Rose Curve Generator</a>
-                <a href="https://arnavcs.github.io/lissajous-curve-generator/" class="javascript cs">Lissajous Curve Generator</a>
-            </div>
-            <h2>Achievements</h2>
-            <div class="twocol">
-                <h3>2022</h3>
-                <ul>
-                    <li class="math">10th in Canada, Asian Pacific Mathematical Olympiad</li>
-                    <li class="math">1st and a perfect score, Alberta High School Math Competition pt. I</li>
-                    <li class="math">1st, Alberta High School Math Competition pt. II</li>
-                    <li class="math">123 out of 150, American Mathematics Contest 12</li>
-                    <li class="math">Qualified, Canadian Mathematics Olympiad</li>
-                    <li class="math">Qualified, American Invitational Math Exam</li>
-                    <li class="science">11th, Canadian Association of Physicists Contest</li>
-                </ul>
-                <h3>2021</h3>
-                <ul>
-                    <li class="math">Top 18 of 90, Canadian Mathematics Olympiad</li>
-                    <li class="math">Top in Alberta overall and 72 out of 80 points, Canadian Open Mathematics Challenge</li>
-                    <li class="math">1st, Alberta High School Math Competition pt. I</li>
-                    <li class="math">7th, Alberta High School Math Competition pt. II</li>
-                    <li class="math">Qualified, American Invitational Math Exam</li>
-                    <li class="math">1st in Alberta and 27th nationally, Fermat</li>
-                    <li class="math">Top 1.5%, Canadian Senior Math Contest</li>
-                    <li class="science">Gold medal and Buckley Engineering Award, Calgary Youth Science Fair</li>
-                    <li class="science">Bronze Finalist, Canada Wide Science Fair</li>
-                    <li class="science">17th globally (12th in Canada), Sir Isaac Newton Exam</li>
-                </ul>
-                <h3>2020</h3>
-                <ul>
-                    <li class="math">Alberta silver medalist (Grade 11) and 5th overall, Canadian Open Mathematics Challenge</li>
-                    <li class="math">11th in grade 10, American Mathematics Competition 12</li>
-                    <li class="math">Qualified, American Invitational Math Exam</li>
-                    <li class="math">1th, Alberta High School Math Competition pt. I</li>
-                    <li class="math">10th, Alberta High School Math Competition pt. II</li>
-                    <li class="math">Top 0.5%, Fermat and Canadian Senior Math Contest</li>
-                    <li class="science">1st in Alberta, Michael Smith Science Challenge</li>
-                </ul>
-                <h3>2019</h3>
-                <ul>
-                    <li class="math">Team Captain, Canadian International Mathematics Competition team</li>
-                    <li class="math">Silver and Bronze medals, South Africa International Mathematics Competition</li>
-                    <li class="math">Alberta silver medalist (Grade 10) and 8th overall, Canadian Open Mathematics Challenge</li>
-                    <li class="math">2nd, Caribou Contest</li>
-                    <li class="math">Robert Barrington Leigh Memorial Prize, Alberta High School Math Competition</li>
-                    <li class="math">1st, Fryer Math Contest</li>
-                    <li class="math">7th, Canadian Intermediate Mathematics Contest</li>
-                    <li class="math">Top 1.5%, Fermat and Euclid</li>
-                    <li class="science">Gold medal and the Senior Pacific Institute of Mathematical Sciences Award, Calgary Youth Science Fair</li>
-                </ul>
-                <h3>2018</h3>
-                <ul>
-                    <li class="math">Merit, Bulgaria International Mathematics Competition</li>
-                    <li class="math">Top 1%, Canadian Intermediate Mathematics Contest</li>
-                    <li class="math">10th, Pascal Math Contest</li>
-                    <li class="math">23rd, Fryer Math Contest</li>
-                    <li class="math">Alberta gold medal (grade 9), Canadian Open Mathematics Challenge</li>
-                </ul>
-                <h3>2017</h3>
-                <ul>
-                    <li class="math">Alberta gold medal (grade 8), Canadian Open Mathematics Challenge</li>
-                </ul>
-                <h3>2016</h3>
-                <ul>
-                    <li class="science">Gold medal and the Junior Pacific Institute of Mathematical Sciences Award, Calgary Youth Science Fair</li>
-                </ul>
-            </div>
-            <h2>Experience️️</h2>
-            <h2>️Education</h2>
-            <div class="module">
-                <div class="module-img">
-                    <img src="https://upload.wikimedia.org/wikipedia/en/6/6e/University_of_Waterloo_seal.svg">
-                </div>
-                <div class="module-content">
-                    <div class="module-header">
-                        <p class="module-title">University of Waterloo</p>
-                        <p class="module-date">2022 - Present</p>
-                    </div>
-                    <p class="module-brief">Bachelor of Computer Science</p>
-                    <p>Ronald G. Dunkley National Scholarship</p>
-                    <p>President’s Entrance Scholarship of Distinction</p>
-                </div>
-            </div>
-            <div class="module">
-                <div class="module-img">
-                    <img src="https://www.webberacademy.ca/pac/Theatre/Home_files/Webber%20Logo%20Large.png">
-                </div>
-                <div class="module-content">
-                    <div class="module-header">
-                        <p class="module-title">Webber Academy</p>
-                        <p class="module-date">2008 - 2022</p>
-                    </div>
-                    <p class="module-brief">Webber Scholar from grade 6 to 12</p>
-                    <p>Recieved annual Merit Scholarship</p>
-                </div>
-            </div>
-        </section>
+        <div id="section-container">
+
+        </div>
         <footer>
             <hr>
             <p>
-                 <a href="https://github.com/arnavcs">Github (arnavcs)</a> ️
+                 <a href="https://github.com/arnavcs">github (arnavcs)</a> ️
                 |
-                 <a href="mailto: arnav.kumar.sri@gmail.com">Email (arnav.kumar.sri@gmail.com)</a> 
+                 <a href="mailto: arnav.kumar.sri@gmail.com">email (arnav.kumar.sri@gmail.com)</a> 
             </p>
         </footer>
     </body>
