--- a/index.html
+++ b/index.html
@@ -23,7 +23,9 @@
             <p>
                  <a href="https://github.com/arnavcs">github (arnavcs)</a> ️
                 |
-                 <a href="mailto: arnav.kumar.sri@gmail.com">email (arnav.kumar.sri@gmail.com)</a> 
+                 <a href="mailto: arnav.kumar.sri@gmail.com">email (arnav.kumar.sri@gmail.com)</a>
+                |
+                 <a href="./img/resume.pdf">resume</a>
             </p>
         </footer>
     </body>
