--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
               <a href="https://github.com/arnavcs"><tt>https://github.com/arnavcs</tt></a>
             </div>
             <div class="compact-block" style="margin-bottom: 0.5em">
-              resume <a href="./img/resume.pdf">[pdf]</a>
+              resume <a href="./assets/resume.pdf">[pdf]</a>
             </div>
           </div></td>
         </tr></tbody>
@@ -90,7 +90,7 @@
         <td style="text-align: right; background-color: #80808040">Jan 2023</td>
       </tr><tr>
         <td style="background-color: #f0f0f0"><div class="compact-block">
-          Prognosing Idiopathic Pulmonary Fibrosis <a href="./img/osic-cwsf-paper.pdf">[CWSF paper]</a>
+          Prognosing Idiopathic Pulmonary Fibrosis <a href="./assets/osic-cwsf-paper.pdf">[CWSF paper]</a>
           <a href="https://github.com/arnavcs/OSIC-IPF">[github]</a>
         </div><div class="compact-block" style="margin-left: 35.145870328812px">
           <p>
