--- a/index.html
+++ b/index.html
@@ -17,55 +17,65 @@
       <section class="card-container">
         <h2>Projects</h2>
         <table>
-          <thead>
-            <tr><th>InterPlanetary File Explorer <a href="https://ipfe.elguindi.xyz/">[try it]</a> <a href="https://github.com/youssefsoli/IPFE">[github]</a> <a href="https://devpost.com/software/changeme">[devpost]</a></th><td>Jan 2023</td></tr>
-          </thead>
-          <tbody>
-            <tr><td colspan=2>A visual file explorer of an IPFS written in Golang, Python, and JavaScript that uses one of Co:here's NLP models to summarize and categorize files based on metadata, and Estuary's API to fetch the files from the IPFS.</td></tr>
-          </tbody>
+          <thead><tr>
+            <th>InterPlanetary File Explorer <a href="https://ipfe.elguindi.xyz/">[try it]</a> <a href="https://github.com/youssefsoli/IPFE">[github]</a> <a href="https://devpost.com/software/changeme">[devpost]</a></th>
+            <td>Jan 2023</td>
+          </tr></thead>
+          <tbody><tr><td colspan=2><ul>
+            <li>A visual file explorer of an IPFS written in Golang, Python, and JavaScript that uses one of Co:here's NLP models to summarize and categorize files based on metadata, and Estuary's API to fetch the files from the IPFS.</li>
+          </ul></td></tr></tbody>
         </table>
         <table>
-          <thead>
-            <tr><th>Prognosing Idiopathic Pulmonary Fibrosis <a href="./assets/osic-cwsf-paper.pdf">[CWSF paper]</a> <a href="https://github.com/arnavcs/OSIC-IPF">[github]</a></th><td>Dec 2020 - Jun 2021</td></tr>
-          </thead>
-          <tbody>
-            <tr><td colspan=2>Several machine learning models written to predict the deterioration of the condition of the lungs over time for patients and give a level of confidence in the prediction.</td></tr>
-          </tbody>
+          <thead><tr>
+            <th>Prognosing Idiopathic Pulmonary Fibrosis <a href="./assets/osic-cwsf-paper.pdf">[CWSF paper]</a> <a href="https://github.com/arnavcs/OSIC-IPF">[github]</a></th>
+            <td>Dec 2020 - Jun 2021</td>
+          </tr></thead>
+          <tbody><tr><td colspan=2><ul>
+            <li>Several machine learning models written to predict the deterioration of the condition of the lungs over time for patients and give a level of confidence in the prediction.</li>
+          </ul></td></tr></tbody>
         </table>
       </section>
       <section class="card-container">
         <h2>Work Experience</h2>
         <table>
-          <thead>
-            <tr><th>Dandelion Networks</th><td>May 2023 - Aug 2023</td></tr>
-          </thead>
-          <tbody>
-            <tr><td colspan=2>Software Engineer</td></tr>
-          </tbody>
+          <thead><tr>
+            <th>Dandelion Networks — Blockchain Software Engineer</th>
+            <td>May 2023 - Aug 2023</td>
+          </tr></thead>
+          <tbody><tr><td colspan=2><ul>
+              <li>Developed and implemented an enhanced syncing algorithm in Go, leveraging node querying to identify and address missing blocks, while ensuring secure and concurrent updates to the syncing node's lattice.</li>
+              <li>Created and deployed a locally hosted debugging website in Go to be run by each node of the blockchain network.</li>
+              <li>Designed multiple mock servers, client, and services to create multiple tests for the syncing algorithm with Go's Ginkgo and Gomega testing frameworks.</li>
+          </ul></td></tr></tbody>
+        </table>
+        <table>
+          <thead><tr>
+            <th>Tektorch.ai — Data Science Intern</th>
+            <td>Apr 2022 - Aug 2022</td>
+          </tr></thead>
+          <tbody><tr><td colspan=2><ul>
+            <li>Extracted features such as job title, location, classification, and pay from a job listing website using Python, Beautiful Soup 4, NumPy, and Pandas to create a dataset for analysis.</li>
+            <li>Developed an end-to-end data visualization pipeline to ingest data and display trends using Matplotlib, and NumPy.</li>
+          </ul></td></tr></tbody>
         </table>
         <table>
           <thead>
-            <tr><th>Tektorch.ai</th><td>Apr 2022 - Aug 2022</td></tr>
+            <tr><th>Code Ninjas West Springs — Coding Instructor</th><td>Mar 2022 - Apr 2022</td></tr>
           </thead>
-          <tbody>
-            <tr><td colspan=2>Part-time junior programmer</td></tr>
-          </tbody>
+          <tbody><tr><td colspan=2><ul>
+            <li>Taught over 45 students to complete programming challenges in Scratch, MakeCode, and JavaScript.</li>
+            <li>Managed the progress of the students and directly relayed feedback to the manager.</li>
+          </ul></td></tr></tbody>
         </table>
         <table>
           <thead>
-            <tr><th>Code Ninjas West Springs</th><td>Mar 2022 - Apr 2022</td></tr>
+            <tr><th>University of Alberta — Machine Learning Research Intern</th><td>Jul 2021 - Aug 2021</td></tr>
           </thead>
-          <tbody>
-            <tr><td colspan=2>Part-time code instructor</td></tr>
-          </tbody>
-        </table>
-        <table>
-          <thead>
-            <tr><th>University of Alberta</th><td>Jul 2021 - Aug 2021</td></tr>
-          </thead>
-          <tbody>
-            <tr><td colspan=2>Computing Science Intern (NLP)</td></tr>
-          </tbody>
+          <tbody><tr><td colspan=2><ul>
+            <li>Trained and employed natural language processing models to help determine the cause of a change in depressive language in Tweets as part of a psychology study.</li>
+            <li>Created an evaluation framework with graphs and videos to analyse subject mouse position data during exams.</li>
+            <li>Developed automation pipeline in Bash to reduce time spent by 20x on the application of the evaluation framework</li>
+          </ul></td></tr></tbody>
         </table>
       </section>
       <section class="card-container">
@@ -75,7 +85,9 @@
             <tr><th>William Lowell Putnam Mathematical Competition (Putnam)</th><td>2022</td></tr>
           </thead>
           <tbody>
-            <tr><td colspan=2>Ranked 335<sup>th</sup> with a score of 26</td></tr>
+            <tr><td colspan=2><ul>
+              <li>Ranked 335<sup>th</sup> with a score of 26</li>
+            </ul></td></tr>
           </tbody>
         </table>
         <table>
@@ -83,7 +95,9 @@
             <tr><th>Asian Pacific Mathematics Olympiad (APMO)</th><td>2021</td></tr>
           </thead>
           <tbody>
-            <tr><td colspan=2>Ranked 10<sup>th</sup> in Canada</td></tr>
+            <tr><td colspan=2><ul>
+              <li>Ranked 10<sup>th</sup> in Canada</li>
+            </ul></td></tr>
           </tbody>
         </table>
         <table>
@@ -91,7 +105,10 @@
             <tr><th>Canadian Mathematical Olympiad (CMO)</th><td>2021 - 2022</td></tr>
           </thead>
           <tbody>
-            <tr><td colspan=2>2 time qualifier<br>Ranked 18th in Canada</td></tr>
+            <tr><td colspan=2><ul>
+              <li>2 time qualifier</li>
+              <li>Ranked 18<sup>th</sup> in Canada</li>
+            </ul></td></tr>
           </tbody>
         </table>
         <table>
@@ -99,7 +116,9 @@
             <tr><th>UofTHacks X</th><td>2023</td></tr>
           </thead>
           <tbody>
-            <tr><td colspan=2>Estuary Sponsor Prize Winner</td></tr>
+            <tr><td colspan=2><ul>
+              <li>Estuary Sponsor Prize Winner</li>
+            </ul></td></tr>
           </tbody>
         </table>
         <table>
@@ -107,7 +126,9 @@
             <tr><th>United States of America Mathematical Olympiad (USAMO)</th><td>2022</td></tr>
           </thead>
           <tbody>
-            <tr><td colspan=2>Qualifier</td></tr>
+            <tr><td colspan=2><ul>
+              <li>Qualifier</li>
+            </ul></td></tr>
           </tbody>
         </table>
         <table>
@@ -115,7 +136,9 @@
             <tr><th>Canada Wide Science Fair (CWSF)</th><td>2021</td></tr>
           </thead>
           <tbody>
-            <tr><td colspan=2>Bronze Medalist</td></tr>
+            <tr><td colspan=2><ul>
+              <li>Bronze Medalist</li>
+            </ul></td></tr>
           </tbody>
         </table>
         <table>
@@ -123,7 +146,9 @@
             <tr><th>Canadian Association of Physicists High School Exam (CAP)</th><td>2022</td></tr>
           </thead>
           <tbody>
-            <tr><td colspan=2>Ranked 11<sup>th</sup> in Canada</td></tr>
+            <tr><td colspan=2><ul>
+              <li>Ranked 11<sup>th</sup> in Canada</li>
+            </ul></td></tr>
           </tbody>
         </table>
         <table>
@@ -131,7 +156,10 @@
             <tr><th>Sir Isaac Newton Physics Exam (SIN)</th><td>2021 - 2022</td></tr>
           </thead>
           <tbody>
-            <tr><td colspan=2>2 time Book Prize Winner (top 50)<br>Ranked 12<sup>th</sup> in Canada and 17<sup>th</sup> internationally</td></tr>
+            <tr><td colspan=2><ul>
+              <li>2 time Book Prize Winner (top 50)</li>
+              <li>Ranked 12<sup>th</sup> in Canada and 17<sup>th</sup> internationally</li>
+            </ul></td></tr>
           </tbody>
         </table>
         <table>
@@ -139,7 +167,11 @@
             <tr><th>Canadian Open Mathematics Challenge (COMC)</th><td>2017 - 2022</td></tr>
           </thead>
           <tbody>
-            <tr><td colspan=2>Canadian Honour Roll<br>Top in Alberta<br>Gold or Silver Alberta Medalist every year</td></tr>
+            <tr><td colspan=2><ul>
+              <li>Canadian Honour Roll</li>
+              <li>Top in Alberta</li>
+              <li>Gold or Silver Alberta Medalist every year</li>
+            </ul></td></tr>
           </tbody>
         </table>
         <table>
@@ -147,7 +179,9 @@
             <tr><th>American Invitational Mathematics Examination (AIME)</th><td>2021 - 2022</td></tr>
           </thead>
           <tbody>
-            <tr><td colspan=2>2 time Qualifier</td></tr>
+            <tr><td colspan=2><ul>
+              <li>2 time Qualifier</li>
+            </ul></td></tr>
           </tbody>
         </table>
         <table>
@@ -155,7 +189,11 @@
             <tr><th>Alberta High School Mathematics Competition (AHSMC)</th><td>2018 - 2022</td></tr>
           </thead>
           <tbody>
-            <tr><td colspan=2>Part II winner and 3 time part I winner<br>Perfect score in part I<br>AHSMC fellow</td></tr>
+            <tr><td colspan=2><ul>
+              <li>Part II winner and 3 time part I winner</li>
+              <li>Perfect score in part I</li>
+              <li>AHSMC fellow</li>
+            </ul></td></tr>
           </tbody>
         </table>
       </section>
